[package]
name = "hn_stories"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = { version = "0.3.21"}

[dev-dependencies]
httpmock = "0.7.0-rc.1"
serde_json = "1.0"
